fix: filter buttons style on mobile
fix: filter buttons style on mobile

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -68,6 +68,15 @@
   }
 }
 
+@media only screen and (max-width: 480px) {
+  .articles-page {
+    .article-filters {
+      .filter-btns {
+        display: none;
+      }
+    }
+  }
+}
 
 /* show page */
 
